--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ body {
     font-size: 52px;
 }
 .link-button {
+    text-decoration: none;
     font-weight: 700;
     font-size: 16px;
     color: #FFFFFF;
@@ -103,4 +104,16 @@ body {
     font-weight: 700;
     font-size: 14px;
     margin-left: 8px;
+}
+.see-more-button {
+    position: relative;
+    left: 1057px;
+    margin-top: 50px;
+}
+.see-more-button a {
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    color: rgba(224, 44, 109, 0.87);
+    border-radius: 41px;
 }
